# traxsourcetagger

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: build.yml
.github/workflows/: build.yml
assets/: icon.icns
client/: .gitignore  package-lock.json  package.json  vue.config.js
client/public/: index.html
client/src/: App.vue  main.js
client/src/components/: Checkbox.vue
client/src/js/: router.js
client/src/style/: app.css
client/src/views/: Advanced.vue  FolderPicker.vue  Intro.vue  Status.vue  Tags.vue
src/: main.rs  tagger.rs  traxsource.rs  ui.rs  utils.rs
