[package]
name = "traxsourcetagger"
version = "0.1.0"
authors = ["Marekkon5"]
edition = "2018"
license = "MIT"
description = "Tool to tag your audio library using data from Traxsource"
homepage = "https://github.com/Marekkon5/traxsourcetagger"
repository = "https://github.com/Marekkon5/traxsourcetagger"
keywords = ["gui", "audio"]
categories = ["multimedia::audio"]
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
webbrowser = "0.5.5"
minify-html = "0.3.10"
chrono = "0.4"
scraper = "0.12"
walkdir = "2.3"
metaflac = "0.2"
regex = "1"
strsim = "0.10"
threadpool = "1.8"
tungstenite = "0.11"
tinyfiledialogs = "3.3"
msgbox = "0.6"
runas = "0.2.1"
reqwest = { version = "0.10", features = [ "blocking" ] }

# Edge doesn't work on 0.7.2, use master
web-view = { git = "https://github.com/Boscop/web-view.git", features = ["edge"] }

# AIFF Support, waiting for merge
id3 = { git = "https://github.com/polyfloyd/rust-id3.git" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"


# Optimize for size, speed doesn't matter due to rate limiting
# For smaller size use: `strip traxsourcetagger` (Linux/Mac)
# `upx -9 traxsourcetagger` - compress, any OS
# More: https://github.com/johnthagen/min-sized-rust

[profile.release]
opt-level = 'z'
lto = true
# panic = 'abort'

# Bundling, only used for Mac, not used for Linux/Win
[package.metadata.bundle]
name = "TraxsourceTagger"
identifier = "com.marekkon5.traxsourcetagger"
icon = ["assets/32x32.png", "assets/128x128.png", "assets/128x128@2x.png", "assets/icon.icns", "assets/icon.ico"]
version = "0.1.0"
resources = []
copyright = "Copyright (c) Marekkon5 2021. All rights reserved."
category = "Music"
short_description = "Tool to tag your audio library using data from Traxsource."
long_description = """
Simple Rust + Webview app to automatically tag your music collection using data from Traxsource.
"""